src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void detail_BlocksCompensator_setSimilarityThreshold_0(void* self, double similarity_threshold);
extern "C" __declspec(dllexport) double detail_BlocksCompensator_getSimilarityThreshold_0(void* self);
extern "C" __declspec(dllexport) void detail_BlocksCompensator_setBlockSize_0(void* self, int width, int height);
extern "C" __declspec(dllexport) void detail_BlocksCompensator_setBlockSize_1(void* self, cv::Size size);
extern "C" __declspec(dllexport) cv::Size detail_BlocksCompensator_getBlockSize_0(void* self);
extern "C" __declspec(dllexport) void detail_BlocksCompensator_setNrGainsFilteringIterations_0(void* self, int nr_iterations);
extern "C" __declspec(dllexport) int detail_BlocksCompensator_getNrGainsFilteringIterations_0(void* self);
extern "C" __declspec(dllexport) void detail_BlocksGainCompensator_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_BlocksGainCompensator_New_0(int bl_width, int bl_height);
extern "C" __declspec(dllexport) void* detail_BlocksGainCompensator_New_1(int bl_width, int bl_height, int nr_feeds);
extern "C" __declspec(dllexport) void detail_BlocksGainCompensator_apply_0(void* self, int index, cv::Point corner, void* image, void* mask);
extern "C" __declspec(dllexport) void detail_BlocksGainCompensator_getMatGains_0(void* self, void* umv);
extern "C" __declspec(dllexport) void detail_BlocksGainCompensator_setMatGains_0(void* self, void* umv);
extern "C" __declspec(dllexport) void detail_BundleAdjusterAffine_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_BundleAdjusterAffine_New_0();
extern "C" __declspec(dllexport) void detail_BundleAdjusterAffinePartial_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_BundleAdjusterAffinePartial_New_0();
extern "C" __declspec(dllexport) void detail_BundleAdjusterBase_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_BundleAdjusterBase_refinementMask_0(void* self);
extern "C" __declspec(dllexport) void detail_BundleAdjusterBase_setRefinementMask_0(void* self, void* mask);
extern "C" __declspec(dllexport) double detail_BundleAdjusterBase_confThresh_0(void* self);
extern "C" __declspec(dllexport) void detail_BundleAdjusterBase_setConfThresh_0(void* self, double conf_thresh);
extern "C" __declspec(dllexport) cv::TermCriteria detail_BundleAdjusterBase_termCriteria_0(void* self);
extern "C" __declspec(dllexport) void detail_BundleAdjusterBase_setTermCriteria_0(void* self, cv::TermCriteria term_criteria);
extern "C" __declspec(dllexport) void detail_BundleAdjusterRay_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_BundleAdjusterRay_New_0();
extern "C" __declspec(dllexport) void detail_BundleAdjusterReproj_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_BundleAdjusterReproj_New_0();
extern "C" __declspec(dllexport) void detail_CameraParams_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_CameraParams_K_0(void* self);
extern "C" __declspec(dllexport) double detail_CameraParams_focal_get(void* self);
extern "C" __declspec(dllexport) void detail_CameraParams_focal_set(void* self, double val);
extern "C" __declspec(dllexport) double detail_CameraParams_aspect_get(void* self);
extern "C" __declspec(dllexport) void detail_CameraParams_aspect_set(void* self, double val);
extern "C" __declspec(dllexport) double detail_CameraParams_ppx_get(void* self);
extern "C" __declspec(dllexport) void detail_CameraParams_ppx_set(void* self, double val);
extern "C" __declspec(dllexport) double detail_CameraParams_ppy_get(void* self);
extern "C" __declspec(dllexport) void detail_CameraParams_ppy_set(void* self, double val);
extern "C" __declspec(dllexport) void* detail_CameraParams_R_get(void* self);
extern "C" __declspec(dllexport) void detail_CameraParams_R_set(void* self, void* val);
extern "C" __declspec(dllexport) void* detail_CameraParams_t_get(void* self);
extern "C" __declspec(dllexport) void detail_CameraParams_t_set(void* self, void* val);
extern "C" __declspec(dllexport) void detail_ChannelsCompensator_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_ChannelsCompensator_New_0(int nr_feeds);
extern "C" __declspec(dllexport) void detail_ChannelsCompensator_apply_0(void* self, int index, cv::Point corner, void* image, void* mask);
extern "C" __declspec(dllexport) void detail_ChannelsCompensator_getMatGains_0(void* self, void* umv);
extern "C" __declspec(dllexport) void detail_ChannelsCompensator_setMatGains_0(void* self, void* umv);
extern "C" __declspec(dllexport) void detail_ChannelsCompensator_setNrFeeds_0(void* self, int nr_feeds);
extern "C" __declspec(dllexport) int detail_ChannelsCompensator_getNrFeeds_0(void* self);
extern "C" __declspec(dllexport) void detail_ChannelsCompensator_setSimilarityThreshold_0(void* self, double similarity_threshold);
extern "C" __declspec(dllexport) double detail_ChannelsCompensator_getSimilarityThreshold_0(void* self);
extern "C" __declspec(dllexport) void detail_DpSeamFinder_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_DpSeamFinder_New_0(const char* costFunc);
extern "C" __declspec(dllexport) void detail_DpSeamFinder_setCostFunction_0(void* self, const char* val);
extern "C" __declspec(dllexport) void detail_Estimator_Delete(void* self);
extern "C" __declspec(dllexport) bool detail_Estimator_operator____0(void* self, void* features, void* pairwise_matches, void* cameras);
extern "C" __declspec(dllexport) void detail_ExposureCompensator_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_ExposureCompensator_createDefault_0(int type);
extern "C" __declspec(dllexport) void detail_ExposureCompensator_feed_0(void* self, void* corners, void* images, void* masks);
extern "C" __declspec(dllexport) void detail_ExposureCompensator_apply_0(void* self, int index, cv::Point corner, void* image, void* mask);