src/OpenCV5Sharp/Generated/NativeMethods.Stitching.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksCompensator_setSimilarityThreshold_0(DetailBlocksCompensatorHandle self, double similarity_threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double detail_BlocksCompensator_getSimilarityThreshold_0(DetailBlocksCompensatorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksCompensator_setBlockSize_0(DetailBlocksCompensatorHandle self, int width, int height);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksCompensator_setBlockSize_1(DetailBlocksCompensatorHandle self, Size size);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Size detail_BlocksCompensator_getBlockSize_0(DetailBlocksCompensatorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksCompensator_setNrGainsFilteringIterations_0(DetailBlocksCompensatorHandle self, int nr_iterations);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int detail_BlocksCompensator_getNrGainsFilteringIterations_0(DetailBlocksCompensatorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksGainCompensator_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_BlocksGainCompensator_New_0(int bl_width, int bl_height);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_BlocksGainCompensator_New_1(int bl_width, int bl_height, int nr_feeds);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksGainCompensator_apply_0(DetailBlocksGainCompensatorHandle self, int index, Point corner, MatHandle image, MatHandle mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksGainCompensator_getMatGains_0(DetailBlocksGainCompensatorHandle self, IntPtr umv);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksGainCompensator_setMatGains_0(DetailBlocksGainCompensatorHandle self, IntPtr umv);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BundleAdjusterAffine_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_BundleAdjusterAffine_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BundleAdjusterAffinePartial_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_BundleAdjusterAffinePartial_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BundleAdjusterBase_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_BundleAdjusterBase_refinementMask_0(DetailBundleAdjusterBaseHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BundleAdjusterBase_setRefinementMask_0(DetailBundleAdjusterBaseHandle self, MatHandle mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double detail_BundleAdjusterBase_confThresh_0(DetailBundleAdjusterBaseHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BundleAdjusterBase_setConfThresh_0(DetailBundleAdjusterBaseHandle self, double conf_thresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern TermCriteria detail_BundleAdjusterBase_termCriteria_0(DetailBundleAdjusterBaseHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BundleAdjusterBase_setTermCriteria_0(DetailBundleAdjusterBaseHandle self, TermCriteria term_criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BundleAdjusterRay_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_BundleAdjusterRay_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BundleAdjusterReproj_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_BundleAdjusterReproj_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_CameraParams_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_CameraParams_K_0(DetailCameraParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double detail_CameraParams_focal_get(DetailCameraParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_CameraParams_focal_set(DetailCameraParamsHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double detail_CameraParams_aspect_get(DetailCameraParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_CameraParams_aspect_set(DetailCameraParamsHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double detail_CameraParams_ppx_get(DetailCameraParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_CameraParams_ppx_set(DetailCameraParamsHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double detail_CameraParams_ppy_get(DetailCameraParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_CameraParams_ppy_set(DetailCameraParamsHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_CameraParams_R_get(DetailCameraParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_CameraParams_R_set(DetailCameraParamsHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_CameraParams_t_get(DetailCameraParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_CameraParams_t_set(DetailCameraParamsHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ChannelsCompensator_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_ChannelsCompensator_New_0(int nr_feeds);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ChannelsCompensator_apply_0(DetailChannelsCompensatorHandle self, int index, Point corner, MatHandle image, MatHandle mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ChannelsCompensator_getMatGains_0(DetailChannelsCompensatorHandle self, IntPtr umv);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ChannelsCompensator_setMatGains_0(DetailChannelsCompensatorHandle self, IntPtr umv);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ChannelsCompensator_setNrFeeds_0(DetailChannelsCompensatorHandle self, int nr_feeds);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int detail_ChannelsCompensator_getNrFeeds_0(DetailChannelsCompensatorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ChannelsCompensator_setSimilarityThreshold_0(DetailChannelsCompensatorHandle self, double similarity_threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double detail_ChannelsCompensator_getSimilarityThreshold_0(DetailChannelsCompensatorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_DpSeamFinder_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_DpSeamFinder_New_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? costFunc);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_DpSeamFinder_setCostFunction_0(DetailDpSeamFinderHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_Estimator_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool detail_Estimator_operator____0(DetailEstimatorHandle self, IntPtr features, IntPtr pairwise_matches, IntPtr cameras);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ExposureCompensator_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_ExposureCompensator_createDefault_0(int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ExposureCompensator_feed_0(DetailExposureCompensatorHandle self, IntPtr corners, IntPtr images, IntPtr masks);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ExposureCompensator_apply_0(DetailExposureCompensatorHandle self, int index, Point corner, MatHandle image, MatHandle mask);
